--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta charset="utf-8">
     <title>JS Bin</title>
     <script type="text/javascript"
-            src="http://cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.8/processing.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
+            src="js/processing.min.js"></script>
+    <script src="js/lodash.min.js"></script>
 </head>
 <body>
 <canvas id="canvas1" width="200" height="200" border="1"></canvas>
@@ -119,11 +119,12 @@
         //var rColor = [p5.random(120, 255), p5.random(120, 255), p5.random(120, 255)];
         var verde = [232, 247, 238];
         var fontA = p5.loadFont("Gulim.ttf");
-        var rWalkers = [], lWalkers = [];
-        _.times(6, function(i){
-            rWalkers.push(new Walker(200, -50 * i));
-            lWalkers.push(new Walker(-200, -60 * i));
-        })
+        var rightWalkers = [], leftWalkers = [];
+        
+        _.times(6, function (i) {
+            rightWalkers.push(new Walker(200, -50 * i));
+            leftWalkers.push(new Walker(-200, -100 * i));
+        });
 
         p5.setup = function () {
             p5.size(570, 500);
@@ -131,47 +132,45 @@
             centerY = p5.height / 2;
             pWidth = p5.width;
             pHeight = p5.height;
-
             p5.textFont(fontA, 34);
             p5.frameRate(frameRate);
             p5.smooth();
-
-            p5.background.apply(this, verde);
+            p5.background.apply(null, verde);
             p5.strokeWeight(0.55);
             p5.stroke(120);
             p5.noFill();
-            p5.ellipse(pWidth - 60, pHeight -60 ,100,100);
+            p5.ellipse(pWidth - 60, pHeight - 60, 100, 100);
             p5.fill(0);
             p5.textSize(14);
             p5.text("MEDIA-LABS", pWidth - 102, pHeight - 55);
-
         };
 
         p5.draw = function () {
+            p5.fill.apply(this, verde);
             p5.pushMatrix();
             p5.translate(centerX, centerY);
-            rWalkers.forEach(function(w){
+            rightWalkers.forEach(function (w) {
                 w.run({direction: "left"});
             });
-            lWalkers.forEach(function(w){
-
-            })
-
             p5.popMatrix();
-            p5.fill.apply(this, [255]);
             p5.textAlign(100, 400);
             p5.textSize(32);
-            //p5.translate(centerX, centerY);
             _.times(15, function (i) {
                 p5.text("SIGNAL-TO-NOISE", 135, i * 28);
-            })
-
-            p5.text("SIGNAL-TO-NOISE", 135, 28);
-            //p5.noFill();
+            });
+            p5.pushMatrix();
+            p5.translate(centerX, centerY);
+            leftWalkers.forEach(function (w) {
+                w.run({direction: "right"});
+            });
+            p5.popMatrix();
+            _.times(15, function (i) {
+                p5.text("SIGNAL-TO-NOISE", 135, i * 28);
+            });
             // bezier(x1, y1, cx1, cy1, cx2, cy2, x2, y2);
-            //p5.bezier(0,centerY,lfo1.run(),lfo1.run(),lfo1.run(),lfo1.run(),pWidth,centerY);
+            p5.stroke(100,100);
+            //p5.bezier(0, centerY, lfo1.run(), lfo1.run(), lfo1.run(), lfo1.run(), pWidth, centerY);
         };
-
     }
     var canvas = document.getElementById("canvas1");
     var p5 = new Processing(canvas, sketchProc);
