--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta name="description" content="[p5-1.js]"/>
     <meta charset="utf-8">
-    <title>JS Bin</title>
+    <title>...</title>
     <!--<script src="//cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.8/processing.min.js//cdnjs.cloudflare.com/ajax/libs/processing.js/1.4.8/processing.min.js"></script>-->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="main.css"/>
 </head>
 <body>
-<canvas id="canvas1" width="100%" height="100%"></canvas>
+<canvas id="canvas1"></canvas>
 <div class="jumbotron">
     <div class="container">
         <div class="col-lg-4">
